--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,19 @@
 </head>
 <body>
 <script>
+const pressed = [];
+const secretcode = 'dogs'
+window.addEventListener('keyup', (e) => {
+  console.log(e.key);
+  pressed.push(e.key);
+  pressed.splice(-secretcode.length -1, pressed.length - secretcode.length);
+  console.log(pressed);
+
+  if (pressed.join('').includes(secretcode)) {
+    console.log('WOOF WOOF');
+    cornify_add();
+  }
+})
 </script>
 </body>
 </html>
